<resources>
    <string name="app_name">Spojrzyj</string>
    <string name="lewe_oko">Lewe oko</string>
    <string name="prawe_oko">Prawe oko</string>
    <string name="typ_miesi_czne">Typ: Miesięczne</string>
    <string name="od_00_00_0000">od 00.00.0000</string>
    <string name="do_00_00_0000">do 00.00.0000</string>
    <string name="informacje_podstawoe">Informacje podstawowe</string>
    <string name="oko_lewe">Oko lewe</string>
    <string name="oko_prawe">Oko prawe</string>
    <string name="pozostdni">Pozostało :</string>
    <string name="dni">dni</string>
    <string name="dodaj_nowe">Dodaj nowe</string>
    <string name="witaj">Witaj !</string>
    <string name="eye">EYE</string>
    <string name="ok">Miłej przygody z aplikacją .\n Aktualna wersja ułatwi ci życie. </string>
    <string name="twoje_preferencje">Twoje preferencje</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="jednodniowe">Jednodniowe</string>
    <string name="dwutygodniowe">Dwutygodniowe</string>
    <string name="miesieczne">Miesięczne</string>
    <string name="kwartalne">Kwartalne</string>
    <string name="roczne">Roczne</string>
    <string name="typ">Typ</string>
    <string name="od">Od</string>
    <string name="zarzadzaj">Zarządzaj</string>
    <string name="akcje">Wybierz swoje akcje</string>
    <string name="main">Główna</string>
    <string name="info">O programie</string>
    <string name="zamknij">Zamknij</string>
    <string name="doo">do</string>
    <string name="informacje">Wersja aktualna to 2.1-2020 :  \n-Kosmetyczne zmiany wyglądu aplikacji,   \n-Integracja z kalendarzem telefonu , \n-Powiadomienia dostępne z kalendarza, \n-Poprawa zabezpieczeń, </string>
    <string name="program">Informacja</string>
    <string name="twoje">Twoje soczewki :</string>
    <string name="historia">Historia</string>
    <string name="appwidget_text">Pozostało dni :</string>
    <string name="add_widget">Add widget</string>
    <string name="todo">TODO</string>
    <string name="powiadomienia">Powiadomienia</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="select">Brak wpisów</string>
    <string name="calendarz">Kalendarz</string>
    <string name="liquid">Płyn do soczewek</string>
    <string name="Soczewki">Soczewki</string>

    <string name="zapasy">Zapasy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="w_przypadku_wyst_pienia_b_d_w_zapyta_biznesowych_zapraszam_do_kontaktu_na_poni_szy_email_lub_po_prostu_kliknij_w_zg_o_b_d">W przypadku wystąpienia błędów , zapytań biznesowych. Zapraszam do kontaktu na poniższy email lub po prostu kliknij w \'Zgłoś błąd\' .</string>
    <string name="kontakt">Kontakt</string>
    <string name="zg_o_b_d">Zgłoś błąd</string>
    <string name="wersja_2_1">Wersja 2.1</string>
    <string name="dodaj_przypomnienie_do_kalendarza_w_twoim_telefonie">Dodaj przypomnienie do kalendarza w twoim telefonie</string>
    <string name="w_tej_cz_ci_mo_esz_sprawdzi_histori_soczewek_oraz_termin_zako_czenia_ich_wa_no_ci_natomiast_gdy_doda_e_a_powiadomienie_do_swojego_kalendarza_mo_esz_zobczy_je_po_wci_ni_ciu_przycisku_obok">W tej części możesz sprawdzić historię soczewek oraz termin zakończenia ich ważności. Natomiast gdy dodałeś/aś powiadomienie do swojego kalendarza możesz zobczyć je po wciśnięciu obrazka kalendarza obok.</string>
    <string name="brak_wpis_w">Brak wpisów</string>
    <string name="historia_twoich_soczewek_usuwaj_niepotrzebne_dane_ostatni_wiersz_wskazuje_zawsze_na_twoje_najnowsze_soczewki">Historia twoich soczewek, usuwaj niepotrzebne dane ostatni wiersz wskazuje zawsze na twoje najnowsze soczewki.</string>
    <string name="poj_ml">poj. (ml) :</string>
    <string name="sztuk">sztuk :</string>
    <string name="P1">Przypomnienie o ściągnięciu soczewek.</string>
    <string name="P2">Twój termin soczewek mija dziś.</string>
    <string name="P3">"Soczewki"</string>
    <string name="add_first">"Najpierw \'dodaj nowe\' byś mógł dodać do nich przypomnienie 🤯"</string>

    <string name="A1">"Dodano twoje soczewki 😁"</string>
    <string name="A2">"Coś poszło nie tak 🤯"</string>

    <string name="C1">"Założone : "</string>
    <string name="C2">"Termin dla : "</string>
    <string name="wybierz_przedmiot">Wybierz przedmiot :</string>
    <string name="testowa_wersja_mini_magazynu_do_zarz_dzania_zasobami_dodaj_soczewki_i_p_yn">Testowa wersja mini magazynu do zarządzania zasobami. Dodaj soczewki i płyn.</string>


</resources>
