<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anioncode.spojrzyj.MainActivity">
    <group android:id="@+id/cart1">
        <item
            android:id="@+id/menu"
            android:icon="@drawable/ic_home"
            android:title="@string/main" />
    </group>
    <group android:id="@+id/cart2">
        <item
            android:id="@+id/kalendarz"
            android:icon="@drawable/ic_date"
            android:title="@string/kalendarz" />
    </group>
    <group android:id="@+id/cart3">

        <item
            android:id="@+id/historia"
            android:icon="@drawable/ic_history"
            android:title="@string/historia" />
    </group>
    <group android:id="@+id/cart4">

        <item
            android:id="@+id/zapasy"
            android:icon="@drawable/ic_dose"
            android:title="@string/zapasy" />
    </group>
    <group android:id="@+id/cart5">


        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />
    </group>


</menu>