<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/drawer"

    android:layout_gravity="start"
    android:layout_height="match_parent" >
    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >

<RelativeLayout


    android:background="@drawable/home"
    tools:context="com.anioncode.spojrzyj.MainActivity"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <RelativeLayout
        android:id="@+id/main"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="3dp"
            android:text="@string/twoje_preferencje"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/main"
        android:id="@+id/Eye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"


        >

        <ImageView
            android:id="@+id/eyeleft"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_marginEnd="5sp"
            android:contentDescription="@string/oko_lewe" />
        <ImageView
            android:id="@+id/eyeright"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_toEndOf="@id/eyeleft"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/oko_prawe" />


    </RelativeLayout>

    <GridLayout

        android:id="@+id/Grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Eye"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:columnCount="2"
        android:rowCount="2">

        <RelativeLayout

            android:layout_width="120dp"
            android:layout_gravity="start"
            android:layout_height="100dp"
            android:layout_column="0"
            android:background="@drawable/border"
             >
            <TextView

                android:id="@+id/L0"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lewe_oko"
                android:textStyle="bold"
                android:gravity="center"

                ></TextView>

            <TextView
                android:id="@+id/okolewe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="20dp"
                android:layout_alignParentStart="true"
                android:textSize="25sp"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="120dp"
          android:layout_gravity="end"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="@drawable/border"
            android:gravity="center"  >

            <TextView
                android:id="@+id/P0"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prawe_oko"
                android:textStyle="bold"
                android:gravity="center"

                ></TextView>

            <TextView
                android:id="@+id/okoprawe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textSize="25sp"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" />

        </RelativeLayout>


    </GridLayout>
    <RelativeLayout
        android:id="@+id/Rel"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/Grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacje_podstawoe"
        android:textAlignment="center"
        android:textStyle="bold"/>
        <TextView
            android:id="@+id/od"
            android:layout_below="@id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/od_00_00_0000"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/doo"
            android:layout_below="@id/od"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_00_00_0000"
            android:textAlignment="center"/>
        <TextView

            android:id="@+id/type"
            android:layout_below="@id/doo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typ_miesi_czne"
            android:textAlignment="center"/>
        <ProgressBar
            android:id="@+id/horizontal_progress_bar"
            android:layout_below="@id/type"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="30dp"
            android:maxHeight="30dp"
            android:progress="20"

            android:progressBackgroundTint="@color/colorAccent"
            android:progressTint="@color/colorPrimaryDark"
            />
        <TextView

            android:id="@+id/Dni"
            android:layout_below="@id/horizontal_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pozostdni"
            android:textAlignment="center"

            />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_margin="10dp"
        android:layout_below="@+id/Rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/dodaj_nowe"/>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button"

        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3788232558823244/5301293338">
    </com.google.android.gms.ads.AdView>
    <RelativeLayout
        android:layout_below="@+id/adView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border"
        android:layout_height="wrap_content"


        android:padding="8dp"
        android:layout_marginBottom="4dp">
        <TextView

            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ok"
            android:textAlignment="center"
            android:background="@drawable/tlo"
            />


    </RelativeLayout>

        <!--<ListView-->
            <!--android:id="@+id/conetent"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

        <!--&gt;</ListView>-->

</RelativeLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationd_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/header"
        app:itemIconTint="@android:color/darker_gray"
        app:itemTextColor="@android:color/darker_gray"
        app:menu="@menu/drawermenu"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp"

        >

        <CheckBox
            android:background="@color/colorPrimary"
            android:id="@+id/chexbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:shadowColor="@android:color/black"
            android:text="@string/powiadomienia"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/CheckBoxTheme"
            tools:text="Powiadomienia" />
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>

    <!--android:fitsSystemWindows="true"-->